# ELK

./: .gitignore  README.md
agent/: CMakeLists.txt  Dockerfile
agent/src/: main.cpp
configs/: agent_config.json
setup/: stop.sh
siem-project/docker/: docker-compose.yml
siem-project/setup/: README.md  start.sh
